Use "List.of()" instead of "Collections.singletonList"